--- a/flexisource.usermanager/Views/User/Index.cshtml
+++ b/flexisource.usermanager/Views/User/Index.cshtml
@@ -1,6 +1,13 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿<table class="table table-striped table-bordered table-hover table-responsive"
+       data-toggle="table" data-url="/user/data" data-flat="true" data-search="true"
+       data-pagination="true"
+       id="userTable">
+    <thead>
+        <tr>
+            <th data-field="userId" data-sortable="true">ID</th>
+            <th data-field="name" data-sortable="true">Name</th>
+            <th data-field="address" data-sortable="true">Address</th>
+        </tr>
+    </thead>
+</table>
 
