--- a/flexisource.usermanager/Views/User/Index.cshtml
+++ b/flexisource.usermanager/Views/User/Index.cshtml
@@ -1,4 +1,6 @@
-﻿<table class="table table-striped table-bordered table-hover table-responsive"
+﻿@model User
+
+<table class="table table-striped table-bordered table-hover table-responsive"
        data-toggle="table"
        data-url="/user/data"
        data-show-refresh="true"
@@ -16,62 +18,41 @@
         </tr>
     </thead>
 </table>
-
-<div class="modal" id="addUserModal" role="dialog">
+<div id="addModal" class="modal fade" role="dialog">
     <div class="modal-dialog">
-        <form>
-            <div class="form-group">
-                <label for="name">Full Name:</label>
-                <input type="text" class="form-control" id="name" placeholder="Enter Name">
-            </div>
-            <div class="form-group">
-                <label for="address">Address:</label>
-                <input type="text" class="form-control" id="address" placeholder="Current Address">
-            </div>
-            <button type="submit" class="btn btn-primary mt-3">Submit</button>
-        </form>
-    </div>
-</div>
-
-<div id="myModal" class="modal fade" role="dialog">
-    <div class="modal-dialog">
-
-        <!-- Modal content-->
         <div class="modal-content">
             <div class="modal-header">
                 <h4 class="modal-title">New Contact Information</h4>
             </div>
-            <div class="modal-body">
-                <form>
+            <form method="post" asp-action="Add">
+                <div class="modal-body">
                     <div class="form-group">
-                        <label for="name">Full Name</label>
-                        <input type="text" class="form-control" id="name" placeholder="Enter Name">
+                        <label asp-for="Name"></label>
+                        <input asp-for="Name" class="form-control" placeholder="Enter Name">
                     </div>
                     <div class="form-group mt-3">
-                        <label for="address">Address</label>
-                        <input type="text" class="form-control" id="address" placeholder="Current Address">
+                        <label asp-for="Address">Address</label>
+                        <input asp-for="Address" class="form-control" placeholder="Current Address">
                     </div>
-                </form>
-            </div>
-            <div class="modal-footer">
-                <button type="submit" class="btn btn-primary mt-3">Submit</button>
-                <button type="button" class="btn btn-primary mt-3" data-dismiss="modal">Cancel</button>
-            </div>
+                </div>
+                <div class="modal-footer">
+                    <input value="Submit" type="submit" class="btn btn-primary mt-3" />
+                    <button type="button" class="btn btn-primary mt-3" data-dismiss="modal">Cancel</button>
+                </div>
+            </form>
         </div>
 
     </div>
 </div>
 
-<script>
-    function buttons() {
+<script>function buttons() {
         return {
             btnAdd: {
                 text: 'Add new row',
                 icon: 'fa-plus',
                 event: function () {
-                    $('#myModal').modal();
+                    $('#addModal').modal();
                 }
             }
         }
-    }
-</script>
+    }</script>
