--- a/flexisource.usermanager/Views/User/Index.cshtml
+++ b/flexisource.usermanager/Views/User/Index.cshtml
@@ -30,15 +30,15 @@
                 <div class="modal-body">
                     <div class="form-group">
                         <label asp-for="FirstName"></label>
-                        <input asp-for="FirstName" class="form-control">
+                        <input asp-for="FirstName" class="form-control" required>
                     </div>
                     <div class="form-group">
                         <label asp-for="LastName"></label>
-                        <input asp-for="LastName" class="form-control">
+                        <input asp-for="LastName" class="form-control" required>
                     </div>
                     <div class="form-group mt-3">
                         <label asp-for="Address">Address</label>
-                        <input asp-for="Address" class="form-control">
+                        <input asp-for="Address" class="form-control" required>
                     </div>
                 </div>
                 <div class="modal-footer">
@@ -65,15 +65,15 @@
                     </div>
                     <div class="form-group">
                         <label asp-for="FirstName"></label>
-                        <input asp-for="FirstName" class="form-control" id="textFname">
+                        <input asp-for="FirstName" class="form-control" id="textFname" required>
                     </div>
                     <div class="form-group">
                         <label asp-for="LastName"></label>
-                        <input asp-for="LastName" class="form-control" id="textLname">
+                        <input asp-for="LastName" class="form-control" id="textLname" required>
                     </div>
                     <div class="form-group mt-3">
                         <label asp-for="Address">Address</label>
-                        <input asp-for="Address" class="form-control" id="textAddress">
+                        <input asp-for="Address" class="form-control" id="textAddress" required>
                     </div>
                 </div>
                 <div class="modal-footer">
